llvm/test/MC/EraVM/asm-parser/arith-operands-errors.s
; RUN: not llvm-mc -triple eravm -o - < %s 2>&1 > %t.stdout | FileCheck %s
; RUN: FileCheck --check-prefix=STDOUT %s < %t.stdout

; STDOUT:     .text
; STDOUT-NOT: {{.+}}

; src: unsigned 16-bit immediate
  add       -42, r2, r3
  add       100000, r2, r3

; FIXME add more test cases


; COM: Autogenerated checks below, see README.md.
; CHECK:       <stdin>:{{[0-9]+}}:13: error: negative immediate operands are not supported
; CHECK-NEXT:    add       -42, r2, r3
; CHECK-NEXT:              ^
; CHECK:       <stdin>:{{[0-9]+}}:13: error: uint16 immediate expected
; CHECK-NEXT:    add       100000, r2, r3
; CHECK-NEXT:              ^
